--- a/.env.vercel
+++ b/.env.vercel
@@ -1,5 +1,4 @@
-# Production Environment Variables (CLEAN SYNTAX)
-# Copy these exactly to Vercel or your local .env files
+# Vercel Production Environment Variables (CLEAN SYNTAX)
 
 DATABASE_URL=postgresql://neondb_owner:npg_zhJvIP74aTle@ep-long-waterfall-abcwopjg-pooler.eu-west-2.aws.neon.tech/neondb?sslmode=require
 BETTER_AUTH_SECRET=OlL/KUwEhBnvmP0JN5NkmVAcsYiAlvWE3dQdEQmk/OI=
