--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
-    "autoprefixer": "10.4.23",
-    "better-auth": "1.4.9",
+    "autoprefixer": "10.4.20",
+    "better-auth": "1.1.8",
     "better-sqlite3": "^12.5.0",
-    "next": "^16.1.1",
+    "lucide-react": "^0.469.0",
+    "next": "15.1.2",
+    "pg": "^8.13.1",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
