--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "npm --prefix src/frontend run lint"
   },
   "dependencies": {
-    "next": "^15.1.2",
+    "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
