--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "lint": "npm --prefix src/frontend run lint"
   },
   "dependencies": {
-    "next": "15.1.2",
+    "next": "^15.5.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  },
-  "devDependencies": {}
+  }
 }
