--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "2nd-hackathon-shafqat",
+  "name": "evolution-of-todo-monorepo",
   "version": "1.0.0",
+  "private": true,
+  "workspaces": [
+    "src/frontend"
+  ],
   "scripts": {
-    "dev": "npm --prefix src/frontend run dev",
-    "build": "npm --prefix src/frontend run build",
-    "start": "npm --prefix src/frontend run start",
-    "lint": "npm --prefix src/frontend run lint"
+    "dev": "npm run dev --workspace=src/frontend",
+    "build": "npm run build --workspace=src/frontend",
+    "start": "npm run start --workspace=src/frontend",
+    "lint": "npm run lint --workspace=src/frontend"
   },
   "dependencies": {
+    "better-auth": "1.4.9",
     "next": "^15.5.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   }
 }
