--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.20",
-    "better-auth": "^1.4.9",
+    "better-auth": "1.4.9",
     "better-sqlite3": "^12.5.0",
     "lucide-react": "^0.469.0",
-    "next": "^15.5.9",
+    "next": "15.1.2",
     "pg": "^8.13.1",
     "react": "19.0.0",
     "react-dom": "19.0.0"
