--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "npm install && npm run build --workspace=src/frontend",
+  "installCommand": "npm install",
+  "buildCommand": "npm run build --workspace=src/frontend",
   "outputDirectory": "src/frontend/.next",
   "rewrites": [
     {
