--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ description = "The Evolution of Todo - From CLI to Full-Stack"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.104,<0.110",
-    "uvicorn>=0.23,<0.30",
-    "pydantic==2.4.2",
+    "fastapi>=0.115.0",
+    "uvicorn>=0.30.0",
+    "pydantic>=2.8.0",
     "sqlmodel>=0.0.14",
     "psycopg2-binary>=2.9.9",
     "pyjwt>=2.8",
