--- a/src/frontend/.env.local
+++ b/src/frontend/.env.local
@@ -2,5 +2,5 @@
 # Local backend runs on port 800; rewrites add the /api prefix automatically.
 NEXT_PUBLIC_BACKEND_URL=http://127.0.0.1:800
 NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000
-BETTER_AUTH_SECRET=my_super_secure_hackathon_secret_key_2025
-DATABASE_URL=postgresql://neondb_owner:npg_zhJvIP74aTle@ep-long-waterfall-abcwopjg-pooler.eu-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+BETTER_AUTH_SECRET=******************
+DATABASE_URL=***********************8
