--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "requests>=2.31",
     "openai>=1.12.0",
     "anthropic>=0.21.0",
-    "modelcontextprotocol>=1.0.1"
+    "modelcontextprotocol>=1.0.1",
+    "duckduckgo-search>=5.0.0"
 ]
